--- a/examples/pq-basics.ipynb
+++ b/examples/pq-basics.ipynb
@@ -52,6 +52,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "## Basic Usage"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "You can now define physical quantities using the `PhysicalQuantity(value, unit)` constructor:"
    ]
   },
@@ -61,16 +68,34 @@
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/latex": [
+       "1.1 $\\text{m}$"
+      ],
+      "text/markdown": [
+       "1.1 $\\text{m}$"
+      ],
+      "text/plain": [
+       "1.1 m"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "g = pq.PhysicalQuantity(1.1, 'm')"
+    "a = pq.PhysicalQuantity(1.1, 'm')\n",
+    "a"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "or as the shortcut `Q()`:"
+    "or using the shortcut `q`:"
    ]
   },
   {
@@ -79,16 +104,30 @@
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(1 mm, 2 mm)"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "g = pq.Q(1.1, 'm')"
+    "from PhysicalQuantities import q\n",
+    "a = 1 * q.mm\n",
+    "b = 2 * q['mm']\n",
+    "a, b"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "This creates a new `PhysicalQuantity` object:"
+    "Calling `\"a = 1 * q.mm\"` creates a new `PhysicalQuantity` object:"
    ]
   },
   {
@@ -102,14 +141,14 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "object: 1.1 m\n",
+      "object: 1 mm\n",
       "object type : <class 'PhysicalQuantities.Quantity.PhysicalQuantity'>\n"
      ]
     }
    ],
    "source": [
-    "print(\"object: %s\" % g)\n",
-    "print(\"object type : %s\" % type(g))"
+    "print(\"object: %s\" % a)\n",
+    "print(\"object type : %s\" % type(a))"
    ]
   },
   {
@@ -130,18 +169,18 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "value: 1.1\n",
-      "value type: <class 'float'>\n",
-      "unit: m\n",
+      "value: 1\n",
+      "value type: <class 'int'>\n",
+      "unit: mm\n",
       "unit type: <class 'PhysicalQuantities.Unit.PhysicalUnit'>\n"
      ]
     }
    ],
    "source": [
-    "print(\"value: %s\" % g.value)\n",
-    "print(\"value type: %s\" % type(g.value))\n",
-    "print(\"unit: %s\" % g.unit)\n",
-    "print(\"unit type: %s\" % type(g.unit))"
+    "print(\"value: %s\" % a.value)\n",
+    "print(\"value type: %s\" % type(a.value))\n",
+    "print(\"unit: %s\" % a.unit)\n",
+    "print(\"unit type: %s\" % type(a.unit))"
    ]
   },
   {
@@ -164,10 +203,10 @@
      "text": [
       "g = 1.1 m\n",
       "g in mm = 1100.0 mm\n",
-      "x = 2 m*kg/s^2\n",
+      "x = 2 kg*m/s^2\n",
       "x in N = 2.0 N\n",
       "u = 1 V\n",
-      "u in base units = 1.0 m^2*kg/s^3/A\n"
+      "u in base units = 1.0 kg*m^2/s^3/A\n"
      ]
     }
    ],
@@ -259,6 +298,35 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "It is also possible to remove the unit without implicit scaling, however this might be **dangerous**:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1.1"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "g._"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## Internal Representation"
    ]
   },
@@ -273,7 +341,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "metadata": {
     "collapsed": false
    },
@@ -284,7 +352,7 @@
        "[1, 2, 3]"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -309,7 +377,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "metadata": {
     "collapsed": false
    },
@@ -326,7 +394,7 @@
        "<PhysicalUnit s**3*m**2/kg/A**2>"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -337,7 +405,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "metadata": {
     "collapsed": false,
     "run_control": {
@@ -351,7 +419,7 @@
        "PhysicalQuantities.Unit.PhysicalUnit"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -366,13 +434,13 @@
    "source": [
     "The unit is stored in a `PhysicalUnit` class. This class has a number of attributes:\n",
     " * `factor` - scaling factor from base units\n",
-    " * `powers` - list of base units contained in unit\n",
+    " * `powers` - list of SI base units contained in unit. All other units can be reduced to these base units.\n",
     " * `prefixed` - unit is a scaled version of a base unit"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 13,
    "metadata": {
     "collapsed": false
    },
@@ -383,7 +451,7 @@
        "(0.001, True)"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -394,7 +462,42 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 14,
+   "metadata": {
+    "collapsed": false,
+    "run_control": {
+     "breakpoint": false
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['m', 'kg', 's', 'A', 'K', 'mol', 'cd', 'rad', 'sr']\n",
+      "[1, 0, 0, 0, 0, 0, 0, 0, 0]\n",
+      "m\n"
+     ]
+    }
+   ],
+   "source": [
+    "from PhysicalQuantities.Unit import base_names\n",
+    "print(base_names) # list containing names of base units\n",
+    "a = q.m\n",
+    "print(a.unit.powers)\n",
+    "print(a.unit.baseunit)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "A more complex example:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
    "metadata": {
     "collapsed": false,
     "run_control": {
@@ -413,19 +516,17 @@
     }
    ],
    "source": [
-    "print(pq.base_names) # list of base units\n",
+    "a = pq.Q([1,2,3], 'm**2*s**3/A**2/kg')\n",
+    "print(base_names)\n",
     "print(a.unit.powers)\n",
-    "print(a.unit)"
+    "print(a.unit.baseunit)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": false,
-    "run_control": {
-     "breakpoint": false
-    }
+    "collapsed": true
    },
    "outputs": [],
    "source": []
@@ -447,9 +548,9 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.4.3"
+   "version": "3.4.4"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 0
+ "nbformat_minor": 1
 }
