--- a/examples/pq-dbquantity.ipynb
+++ b/examples/pq-dbquantity.ipynb
@@ -2,9 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "metadata": {
-    "variables": {}
-   },
+   "metadata": {},
    "source": [
     "Back to [Index](index.ipynb)"
    ]
@@ -20,7 +18,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The IPython extension for dB units is loaded using:"
+    "dB calculations can also be performed using the `dBQuantity` class:"
    ]
   },
   {
@@ -29,16 +27,29 @@
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1 dBm"
+      ]
+     },
+     "execution_count": 1,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "%reload_ext PhysicalQuantities.dBQuantity_ipython"
+    "from PhysicalQuantities.dBQuantity import dBQuantity\n",
+    "a = dBQuantity(1, 'dBm')\n",
+    "a"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "It provides an easy way to do dB calculations:"
+    "The IPython extension provides an easy way to do dB calculations:"
    ]
   },
   {
@@ -46,6 +57,83 @@
    "execution_count": 2,
    "metadata": {
     "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "10 dBm"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "p = 0 dBm\n",
+    "g = 20 dB\n",
+    "a = 10 dB\n",
+    "p + g - a"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The list of supported dBUnits is small:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['dBnV',\n",
+       " 'dB',\n",
+       " 'dBV',\n",
+       " 'dBi',\n",
+       " 'dBnA',\n",
+       " 'dBuA',\n",
+       " 'dBc',\n",
+       " 'dBA',\n",
+       " 'dBW',\n",
+       " 'dBuV',\n",
+       " 'dBd',\n",
+       " 'dBm',\n",
+       " 'dBmA',\n",
+       " 'dBsm',\n",
+       " 'dBmV']"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from PhysicalQuantities.dBQuantity import dB_unit_table\n",
+    "list(dB_unit_table.keys())"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Converting to other units is easy:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {
+    "collapsed": false,
+    "scrolled": true
    },
    "outputs": [
     {
@@ -59,51 +147,16 @@
     }
    ],
    "source": [
-    "p = 0 dBm\n",
     "print(p)\n",
     "print(p.dBW)\n",
     "print(p.W)"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "3 dBm\n"
-     ]
-    }
-   ],
+   "cell_type": "markdown",
+   "metadata": {},
    "source": [
-    "g = 3 dB\n",
-    "print (p+g)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "-30.0 dBW\n",
-      "-30.0\n"
-     ]
-    }
-   ],
-   "source": [
-    "print(p.dBW)\n",
-    "print(p.dBW_)"
+    "Absolute values (`dBm` or `dBW`) are handled differently compared to unitless `dB`:"
    ]
   },
   {
@@ -112,9 +165,21 @@
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "3.0102999566398121 dBW"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "from PhysicalQuantities.dBQuantity import dBQuantity"
+    "p = 0 dBW\n",
+    "p+p"
    ]
   },
   {
@@ -125,16 +190,26 @@
    },
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "0.1 dBm\n"
-     ]
+     "data": {
+      "text/plain": [
+       "0 dBW"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "a = dBQuantity(0.1,'dBm', islog=True)\n",
-    "print(a)"
+    "g = 0 dB\n",
+    "p+g"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The `_` attribute to remove units is available too:"
    ]
   },
   {
@@ -145,18 +220,34 @@
    },
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "(0.1, 'dBm')"
-      ]
-     },
-     "execution_count": 7,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "-30.0 dBW\n",
+      "-30.0\n",
+      "0\n"
+     ]
     }
    ],
    "source": [
-    "a.value, a.unit"
+    "p = 0 dBm\n",
+    "print(p.dBW)\n",
+    "print(p.dBW_)\n",
+    "print(p._)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Internal representation"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Calling the `dBQuantity()` constructor creates the desired object:"
    ]
   },
   {
@@ -168,11 +259,8 @@
    "outputs": [
     {
      "data": {
-      "text/markdown": [
-       "0.0010232929922807542 $\\text{W}$"
-      ],
       "text/plain": [
-       "0.0010232929922807542 W"
+       "0.1 dBm"
       ]
      },
      "execution_count": 8,
@@ -181,30 +269,124 @@
     }
    ],
    "source": [
-    "a.W"
+    "a = dBQuantity(0.1,'dBm', islog=True)\n",
+    "a"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The information is stored in two attributes:"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 13,
    "metadata": {
     "collapsed": false
    },
    "outputs": [
     {
      "data": {
-      "text/markdown": [
-       "1.02 $\\text{mW}$"
-      ],
       "text/plain": [
-       "1.02 mW"
+       "(0.1, 'dBm')"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
+   "source": [
+    "a.value, a.unitname"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The unit itself is represented as `dBUnit` object:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "u = a.unit"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The unit contains the name, the conversion factor (10 or 20), the reference impedance and the underlying PhysicalUnit:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "('dBm', 10, 0, 50 Ohm, <PhysicalUnit mW>)"
+      ]
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "u.name, u.factor, u.offset, u.z0, u.physicalunit"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "For relative dB values, offset and physicalunit are unknown:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "('dB', 0, 0, 50 Ohm, None)"
+      ]
+     },
+     "execution_count": 23,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "a = 0dB\n",
+    "u = a.unit\n",
+    "u.name, u.factor, u.offset, u.z0, u.physicalunit"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
    "source": [
     "%precision 2\n",
     "a.mW"
@@ -214,35 +396,42 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Helper function to generate dB values from a linear value:"
+    "Calling with `islog=False` converts the value to log:"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "0.00 dBm"
-      ]
-     },
-     "execution_count": 10,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "from PhysicalQuantities.dBQuantity import dB, dB10, dB20\n",
-    "dB(1 mW)"
+    "a = dBQuantity(0.1,'dBm', islog=False)\n",
+    "a"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Conversion from and to dB"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 27,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "from PhysicalQuantities.dBQuantity import dB10, dB20"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
    "metadata": {
     "collapsed": false
    },
@@ -250,10 +439,10 @@
     {
      "data": {
       "text/plain": [
-       "10.00 dB"
+       "10.0 dB"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -264,7 +453,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 29,
    "metadata": {
     "collapsed": false
    },
@@ -272,16 +461,119 @@
     {
      "data": {
       "text/plain": [
-       "20.00 dB"
+       "20.0 dB"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "dB20(10)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.0 dBm"
+      ]
+     },
+     "execution_count": 31,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "p = (1mW).dB\n",
+    "p"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/latex": [
+       "1.0 $\\text{mW}$"
+      ],
+      "text/markdown": [
+       "1.0 $\\text{mW}$"
+      ],
+      "text/plain": [
+       "1.0 mW"
+      ]
+     },
+     "execution_count": 32,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "p.lin"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "For relative dB values, the conversion factor to linear has to be specified, either $10^{(value/10)}$ or $10^{(value/20)}$. This can be simplified by using the properties `lin10` or `lin20`:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "10.0"
+      ]
+     },
+     "execution_count": 34,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "a = 10 dB\n",
+    "a.lin10"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "3.1622776601683795"
+      ]
+     },
+     "execution_count": 38,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "a.lin20"
    ]
   },
   {
@@ -310,9 +602,9 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.4.3"
+   "version": "3.4.4"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 0
+ "nbformat_minor": 1
 }
