--- a/examples/pq-ipython.ipynb
+++ b/examples/pq-ipython.ipynb
@@ -150,7 +150,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "1 N*m\n",
+      "1 m*N\n",
       "1.0 J\n"
      ]
     }
@@ -202,13 +202,6 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "There is limited support for the `uncertainties` module. This should improve in the future."
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": 7,
    "metadata": {
@@ -219,54 +212,75 @@
    },
    "outputs": [
     {
-     "ename": "ImportError",
-     "evalue": "No module named 'uncertainties'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mImportError\u001b[0m                               Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-7-caf4a16ea7e8>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0;32mfrom\u001b[0m \u001b[0muncertainties\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mufloat\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[0;31mImportError\u001b[0m: No module named 'uncertainties'"
-     ]
+     "data": {
+      "text/latex": [
+       "[1, 2, 3] $\\text{V}$"
+      ],
+      "text/markdown": [
+       "[1, 2, 3] $\\text{V}$"
+      ],
+      "text/plain": [
+       "[1, 2, 3] V"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "from uncertainties import ufloat"
+    "a = [1, 2, 3] * 1V\n",
+    "a"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[1, 2, 3]"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "x = ufloat(2, 0.25) * 1 m\n",
-    "x"
+    "a.value"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/latex": [
+       "[1, 2, 3, 1, 2, 3] $\\text{V}$"
+      ],
+      "text/markdown": [
+       "[1, 2, 3, 1, 2, 3] $\\text{V}$"
+      ],
+      "text/plain": [
+       "[1, 2, 3, 1, 2, 3] V"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "square = x**2  # Transparent calculations\n",
-    "square"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
-   "source": [
-    "square - x*x"
+    "2*a"
    ]
   },
   {
@@ -287,24 +301,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<table><tr><th>Name</th><th>Base Unit</th><th>Quantity</th></tr><tr><td>Wb</td><td>1.0 $\\frac{\\text{m}^{2}\\cdot \\text{kg}}{\\text{A}\\cdot \\text{s}^2}$</td><td><a href=\"https://en.wikipedia.org/wiki/Weber_(unit)\" target=\"_blank\">Weber</a></td></tr><tr><td>s</td><td>1.0 $\\text{s}$</td><td><a href=\"https://en.wikipedia.org/wiki/Second\" target=\"_blank\">Second</a></td></tr><tr><td>h</td><td>3600.0 $\\text{s}$</td><td><a href=\"https://en.wikipedia.org/wiki/Hour\" target=\"_blank\">Hour</a></td></tr><tr><td>lx</td><td>1.0 $\\frac{\\text{cd}\\cdot \\text{sr}}{\\text{m}^2}$</td><td><a href=\"https://en.wikipedia.org/wiki/Lux\" target=\"_blank\">Lux</a></td></tr><tr><td>sr</td><td>1.0 $\\text{sr}$</td><td><a href=\"https://en.wikipedia.org/wiki/Steradian\" target=\"_blank\">Streradian</a></td></tr><tr><td>min</td><td>60.0 $\\text{s}$</td><td><a href=\"https://en.wikipedia.org/wiki/Hour\" target=\"_blank\">Minute</a></td></tr><tr><td>J</td><td>1.0 $\\frac{\\text{m}^{2}\\cdot \\text{kg}}{\\text{s}^2}$</td><td><a href=\"https://en.wikipedia.org/wiki/Joule\" target=\"_blank\">Joule</a></td></tr><tr><td>Pa</td><td>1.0 $\\frac{\\text{kg}}{\\text{m}\\cdot \\text{s}^2}$</td><td><a href=\"https://en.wikipedia.org/wiki/Pascal_(unit)\" target=\"_blank\">Pascal</a></td></tr><tr><td>arcsec</td><td>4.84813681109536e-06 $\\text{rad}$</td><td><a href=\"\" target=\"_blank\">seconds of arc</a></td></tr><tr><td>cd</td><td>1.0 $\\text{cd}$</td><td><a href=\"https://en.wikipedia.org/wiki/Candela\" target=\"_blank\">Candela</a></td></tr><tr><td>lm</td><td>1.0 $\\text{cd}\\cdot \\text{sr}$</td><td><a href=\"https://en.wikipedia.org/wiki/Lumen_(unit)\" target=\"_blank\">Lumen</a></td></tr><tr><td>H</td><td>1.0 $\\frac{\\text{m}^{2}\\cdot \\text{kg}}{\\text{A}^2\\cdot \\text{s}^2}$</td><td><a href=\"https://en.wikipedia.org/wiki/Henry_(unit)\" target=\"_blank\">Henry</a></td></tr><tr><td>m</td><td>1.0 $\\text{m}$</td><td><a href=\"https://en.wikipedia.org/wiki/Metre\" target=\"_blank\">Metre</a></td></tr><tr><td>T</td><td>1.0 $\\frac{\\text{kg}}{\\text{A}\\cdot \\text{s}^2}$</td><td><a href=\"https://en.wikipedia.org/wiki/Tesla_(unit)\" target=\"_blank\">Tesla</a></td></tr><tr><td>S</td><td>1.0 $\\frac{\\text{A}^{2}\\cdot \\text{s}^{3}}{\\text{m}^2\\cdot \\text{kg}}$</td><td><a href=\"https://en.wikipedia.org/wiki/Siemens_(unit)\" target=\"_blank\">Siemens</a></td></tr><tr><td>C</td><td>1.0 $\\text{A}\\cdot \\text{s}$</td><td><a href=\"https://en.wikipedia.org/wiki/Coulomb\" target=\"_blank\">Coulomb</a></td></tr><tr><td>deg</td><td>0.017453292519943295 $\\text{rad}$</td><td><a href=\"http://en.wikipedia.org/wiki/Degree_%28angle%29\" target=\"_blank\">Degree</a></td></tr><tr><td>K</td><td>1.0 $\\text{K}$</td><td><a href=\"https://en.wikipedia.org/wiki/Kelvin\" target=\"_blank\">Kelvin</a></td></tr><tr><td>g</td><td>0.001 $\\text{kg}$</td><td><a href=\"https://en.wikipedia.org/wiki/Kilogram\" target=\"_blank\">Gram</a></td></tr><tr><td>kg</td><td>1 $\\text{kg}$</td><td><a href=\"https://en.wikipedia.org/wiki/Kilogram\" target=\"_blank\">Kilogram</a></td></tr><tr><td>F</td><td>1.0 $\\frac{\\text{A}^{2}\\cdot \\text{s}^{4}}{\\text{m}^2\\cdot \\text{kg}}$</td><td><a href=\"https://en.wikipedia.org/wiki/Farad\" target=\"_blank\">Farad</a></td></tr><tr><td>W</td><td>1.0 $\\frac{\\text{m}^{2}\\cdot \\text{kg}}{\\text{s}^3}$</td><td><a href=\"https://en.wikipedia.org/wiki/Watt\" target=\"_blank\">Watt</a></td></tr><tr><td>arcmin</td><td>0.0002908882086657216 $\\text{rad}$</td><td><a href=\"\" target=\"_blank\">minutes of arc</a></td></tr><tr><td>Hz</td><td>1.0 $\\frac{1}{\\text{s}}$</td><td><a href=\"https://en.wikipedia.org/wiki/Hertz\" target=\"_blank\">Hertz</a></td></tr><tr><td>A</td><td>1.0 $\\text{A}$</td><td><a href=\"https://en.wikipedia.org/wiki/Ampere\" target=\"_blank\">Ampere</a></td></tr><tr><td>Ohm</td><td>1.0 $\\frac{\\text{m}^{2}\\cdot \\text{kg}}{\\text{A}^2\\cdot \\text{s}^3}$</td><td><a href=\"https://en.wikipedia.org/wiki/Ohm_(unit)\" target=\"_blank\">Ohm</a></td></tr><tr><td>N</td><td>1.0 $\\frac{\\text{m}\\cdot \\text{kg}}{\\text{s}^2}$</td><td><a href=\"https://en.wikipedia.org/wiki/Newton_(unit)\" target=\"_blank\">Newton</a></td></tr><tr><td>V</td><td>1.0 $\\frac{\\text{m}^{2}\\cdot \\text{kg}}{\\text{A}\\cdot \\text{s}^3}$</td><td><a href=\"https://en.wikipedia.org/wiki/Volt\" target=\"_blank\">Volt</a></td></tr><tr><td>rad</td><td>1.0 $\\text{rad}$</td><td><a href=\"https://en.wikipedia.org/wiki/Radian\" target=\"_blank\">Radian</a></td></tr><tr><td>mol</td><td>1.0 $\\text{mol}$</td><td><a href=\"https://en.wikipedia.org/wiki/Mole_(unit)\" target=\"_blank\">Mol</a></td></tr></table>"
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "execution_count": 1,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "import PhysicalQuantities as pq\n",
-    "pq.units_html_list()"
+    "from PhysicalQuantities import units_html_list\n",
+    "units_html_list()"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": false,
-    "run_control": {
-     "breakpoint": false
-    }
+    "collapsed": true
    },
    "outputs": [],
    "source": []
@@ -313,6 +338,7 @@
  "metadata": {
   "kernelspec": {
    "display_name": "Python 3",
+   "language": "python",
    "name": "python3"
   },
   "language_info": {
@@ -325,9 +351,9 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.4.2"
+   "version": "3.4.4"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 0
+ "nbformat_minor": 1
 }
