--- a/examples/pq-sympy.ipynb
+++ b/examples/pq-sympy.ipynb
@@ -185,14 +185,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 9,
    "metadata": {
     "collapsed": false
    },
    "outputs": [
     {
      "data": {
-      "image/png": "iVBORw0KGgoAAAANSUhEUgAAAF0AAAAxCAYAAAC4R6XiAAAABHNCSVQICAgIfAhkiAAABO9JREFU\neJztmmtsFUUUx39SK9wqUiOviJWHKEU0gJWH1mjaaAy+YiQm4gfRaELik0SNiR/kk48Yo8EokcTI\nVUPUCEaU1sQnVVDBiI+CH6wmQlTwhQqKFKr1w382u17uY2Z6t9t77/6SZnb3zplz9nTmzMyZhZSK\n5DZgD7AVmJawLTVBG9AHnAP0ABuTNac22AJ0AhngG+CFZM2pfuYB/cDipA2pJR5HTh+XtCG1xE5g\ne9JGVCLDPOVOAZpIJ04vjvSUazflZgeZccBuT31xc8RgKvPt6W2m/MRB5npgBnrBofZXEewCDgD1\nDjLPxWRLxeHT008FxgPbgEOWMhOBbz10VSU+Tj/PlJ85yCwEXvbQVZUMxOlfOMjMBj710FWV+Dj9\nbFN2W9Y/AfjBQ48NV8bU7pBiDNqF9ptrG24G5sdgSzPwSgztxo5rTw96+U/Az5Yy8ym9nm/ALVwB\nXAM87yhTLh5BO/J+wuVzbDxoFL1lWX8M8GiJOnOAj027LmxF2c2kuAXo9bHBdUcahAnbXnkFhUPA\ndOBhNGL+cbRjLsr7/O0oV07ORZ0lVhvqgD9Rj7zOUuZZ7EJYFreevhxY4FA/Dr4H7vMRdInpzcDR\n5vpzi/rHAXuBf12NKkEdiqNvlrldF05Gq7IuH2GX8DLHlH3Al+Y6Q+HhdTnwqo9RJWgH3jd25NIC\nXIvC1STgRmAJ0AhMAJahEy4fnUvQrroRLZf7gE1x638ChYCgl48CPgKGF6ifxT43k8U+vKwCWvM8\nn2JsDEZvFvgKnd+2ohF3h6WOKDcAPwInmvuTgP3Ah4OhfzNyzCrkzGVo9r4oT92RwJMObWexc/oI\nlH7IlxlcYfQGvES4VG1Ck/bxDjYBzET5pUU5z39BK7lY9deh/24/WipNBo5FS8fH8tRfBFzq0H4W\nO6cvBB4o8NvknPvv8JzoIqxHn5dER+xpyNbcibzs+mcQ7kSju8ul5I9RT1M47OQji53T1wCnW9Sb\nZtq7wMGGXBpR3H4x5/lN5vnIwyQs9duuXmaZ8hD/zy52oFjWHHnWgOJXr2XbtoxC8XSbRd124CDw\nQeTZFEd9U9EIz43dbWhjtq9Im0X12zp9pim70eFFQI/5i4aSBcDrlu26UCw9nAEeAs4w9xeiDdx+\ncz8MuNNR315T7szRcz7hUvF2H/22Tg8ay5dDWQ9cErn3cfoIUzYUqXM1hXMtFwN3oTDYjA7OoyPt\nHuAZR5t6kOMmmft6NFkOB74GxqJVjbN+23V64PQteX7rAG5Fw/8A4aRbirHoCG+CMRZgBwofTwGr\nI3XHo5fdUaCtLjQvtABnonlnBbASvfw63A7RQTH5KpQ7akLvdb/RtRg4C7g7Lv2NhJPo9Dy/1wN/\nGAMvQ9m/crMUTWA1Qyty+K8UPjlfg4bPSrSULDebgNExtJsINjE9GPobKbys60CxPEM4AZWLqcDv\naENSFbg4/b0idTpRT3x3wBYdTpKHFYmxAfXweSXqdeG+zbbhNeCYGNod0uwB/sLtw6KUATAR9fJ3\nkjakmigV01tMGUesrllKOX2uKd+O25CUkA1oCej7SXWKI8FR3NqkDak2ioWXdpSIWjdIttQky1FW\n7Shzvxr4jeKZv5QBsh2dAmVQVq0XuDdRi6qUusj1bHS6342SVwcJPydIiYnRwBsoF95J+MlBSkpK\nSkpl8B/sEgahRtMp+gAAAABJRU5ErkJggg==\n",
+      "image/png": "iVBORw0KGgoAAAANSUhEUgAAAFYAAAA0BAMAAADiRNKVAAAAMFBMVEX///8AAAAAAAAAAAAAAAAA\nAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAv3aB7AAAAD3RSTlMAmYkQdqvvRN27IjJm\nVM1kwppwAAAACXBIWXMAAA7EAAAOxAGVKw4bAAACrUlEQVRIDX1Uz2vTcBR/TdI1bZpmCJ4UDOph\nINIwNq+NbkNEpD0MQRE28CaCFcRrI+jVFYQdbRFEBLH9D9rDDjuIK+jJS+tF8GSx0zK1m9/fP9Ym\n75D3+fHy5eX7fd8AzArjiMVwlqtrtk4T2dtEVzc/6zSRnUp0dTPS6TGWOhtIxRxIPAOtXapI1fUR\ndu9KQUPm2A6lYFQBlk+OpKAhS9v0Au7Hiqu16+qrBUxia1uhWvswsbaMOpRxI7G2gTsU8QKj2B5+\nizoMIvyIq3V+YZeHU8Eortba53WkqkueMXuWHau16WZSraetQSc9rodOhFfiQSY9dfPwDhe0vEe+\nhks7HLDsbM8rykaoEJiadK+n2FtVhdDtVYVaIJl5pBCYnvQFWQqudmxk0hUX4KvCjANGcm0E8KQr\nkTtxfQLm6u1H54lY+Mm8QogAmXQmoPS4mR3BIuyGz4nmTZjVryBAJp0JAOZ9SA3gHBSDL0Rr/aGW\nubuJAJl0+j9DLDUC24cAvtMS6A8pcJEBcJGpNM3VoYQ/gE9XccDsPG6GTDoTAEo+9BFx/jKlMc9A\nDn9kxAhNpR68dJuf0EVfIcKDHrcP0QoVTkguhPlnRmaSHea6mCvH9gPdB6JhnYS5fuH1VXN95fIH\nQjPy2IptSDeJGPOw5G3rdyH5n57+JxYpVSD5n27z/QCYi2BHvDgLeEOhpkfTky5MDDp1Qa0x396l\ntTdXQqELUPYFdPbNASGmn39qUyhMDDaqkh6wSTcCY+Q2pc7RFgcof0vRF00oyM4UHx2siDPvOfRC\njpTs8FuBtb2P3Om0OVJyXm4vQOsJddygDFagVFGY3lQkfp1qvQa8U3QGPV/R0D0ksby6dLqr6AzW\n1MaMaLpAKAtwS2AEMr7KjuFt594xJZ6+uqa2EF+HnP9AgZweHopAbQAAAABJRU5ErkJggg==\n",
       "text/latex": [
        "$$\\int \\sqrt{\\frac{1}{x}}\\, dx$$"
       ],
@@ -205,7 +205,7 @@
        "⌡           "
       ]
      },
-     "execution_count": 16,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -240,9 +240,9 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.4.3"
+   "version": "3.4.4"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 0
+ "nbformat_minor": 1
 }
