--- a/examples/pq-autoscale.ipynb
+++ b/examples/pq-autoscale.ipynb
@@ -23,6 +23,9 @@
    "outputs": [
     {
      "data": {
+      "text/latex": [
+       "1.0 $\\text{mm}$"
+      ],
       "text/markdown": [
        "1.0 $\\text{mm}$"
       ],
@@ -49,6 +52,9 @@
    "outputs": [
     {
      "data": {
+      "text/latex": [
+       "300.0 $\\text{µs}$"
+      ],
       "text/markdown": [
        "300.0 $\\text{µs}$"
       ],
@@ -75,6 +81,9 @@
    "outputs": [
     {
      "data": {
+      "text/latex": [
+       "1.0 $\\text{m}$"
+      ],
       "text/markdown": [
        "1.0 $\\text{m}$"
       ],
@@ -100,7 +109,19 @@
    },
    "outputs": [
     {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "s 4\n",
+      "A 2\n",
+      "m 2\n"
+     ]
+    },
+    {
      "data": {
+      "text/latex": [
+       "3.00 $\\text{nF}$"
+      ],
       "text/markdown": [
        "3.00 $\\text{nF}$"
       ],
@@ -145,9 +166,9 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.4.3"
+   "version": "3.4.4"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 0
+ "nbformat_minor": 1
 }
