--- a/examples/pq-formatting.ipynb
+++ b/examples/pq-formatting.ipynb
@@ -26,6 +26,9 @@
       "text/latex": [
        "2.3333333333333335 $\\frac{1}{\\text{m}}$"
       ],
+      "text/markdown": [
+       "2.3333333333333335 $\\frac{1}{\\text{m}}$"
+      ],
       "text/plain": [
        "2.3333333333333335 1/m"
       ]
@@ -64,6 +67,9 @@
     {
      "data": {
       "text/latex": [
+       "2.3 $\\frac{1}{\\text{m}}$"
+      ],
+      "text/markdown": [
        "2.3 $\\frac{1}{\\text{m}}$"
       ],
       "text/plain": [
@@ -162,7 +168,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 5,
    "metadata": {
     "collapsed": false,
     "run_control": {
@@ -173,13 +179,16 @@
     {
      "data": {
       "text/latex": [
-       "1.235 $\\text{mm}$"
+       "2.333 $\\frac{1}{\\text{m}}$"
+      ],
+      "text/markdown": [
+       "2.333 $\\frac{1}{\\text{m}}$"
       ],
       "text/plain": [
-       "1.235 mm"
+       "2.333 1/m"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -198,7 +207,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 6,
    "metadata": {
     "collapsed": false,
     "run_control": {
@@ -236,7 +245,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 7,
    "metadata": {
     "collapsed": false,
     "run_control": {
@@ -317,9 +326,9 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.4.3"
+   "version": "3.4.4"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 0
+ "nbformat_minor": 1
 }
