--- a/examples/pq-basics.ipynb
+++ b/examples/pq-basics.ipynb
@@ -40,9 +40,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "import PhysicalQuantities as pq"
@@ -65,13 +63,14 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
       "text/latex": [
+       "1.1 $\\text{m}$"
+      ],
+      "text/markdown": [
        "1.1 $\\text{m}$"
       ],
       "text/plain": [
@@ -92,15 +91,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "or using the shortcut `q`:"
+    "or using the shortcut `q` for single units:"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 3,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -130,16 +127,14 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
       "object: 1 mm\n",
-      "object type : <class 'PhysicalQuantities.Quantity.PhysicalQuantity'>\n"
+      "object type : <class 'PhysicalQuantities.quantity.PhysicalQuantity'>\n"
      ]
     }
    ],
@@ -158,9 +153,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -169,7 +162,7 @@
       "value: 1\n",
       "value type: <class 'int'>\n",
       "unit: mm\n",
-      "unit type: <class 'PhysicalQuantities.Unit.PhysicalUnit'>\n"
+      "unit type: <class 'PhysicalQuantities.unit.PhysicalUnit'>\n"
      ]
     }
    ],
@@ -184,15 +177,48 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "For more complex units, you can use the `Q` abbreviation for `PhysicalQuantity`. The expressions below are identical:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/latex": [
+       "9.81 $\\frac{\\text{m}}{\\text{s}^2}$"
+      ],
+      "text/markdown": [
+       "9.81 $\\frac{\\text{m}}{\\text{s}^2}$"
+      ],
+      "text/plain": [
+       "9.81 m/s^2"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "g = pq.PhysicalQuantity(9.81, 'm/s**2')\n",
+    "g = pq.Q(9.81, 'm/s**2')\n",
+    "g"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "Using `.to()` let's you convert to other representations of the unit. This can be used for scaling or to express the quantity in a derived unit. The `.base` property will convert "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {
-    "collapsed": false
-   },
+   "execution_count": 13,
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -200,21 +226,21 @@
      "text": [
       "g = 1.1 m\n",
       "g in mm = 1100.0 mm\n",
-      "x = 2 kg*m/s^2\n",
+      "x = 2 m*kg/s^2\n",
       "x in N = 2.0 N\n",
       "u = 1 V\n",
-      "u in base units = 1.0 kg*m^2/s^3/A\n"
+      "u in base units = 1.0 m^2*kg/s^3/A\n"
      ]
     }
    ],
    "source": [
-    "g = pq.PhysicalQuantity(1.1, 'm')\n",
+    "g = pq.Q(1.1, 'm')\n",
     "print(\"g = %s\" % g)\n",
     "print(\"g in mm = %s\" %g.to('mm'))\n",
-    "x = pq.PhysicalQuantity(2, 'm*kg/s**2')\n",
+    "x = pq.Q(2, 'm*kg/s**2')\n",
     "print(\"x = %s\" %x)\n",
     "print(\"x in N = %s\" % x.to('N'))\n",
-    "u = 1 V\n",
+    "u = pq.Q(1, 'V')\n",
     "print(\"u = %s\" %u)\n",
     "print(\"u in base units = %s\" %u.base)"
    ]
@@ -228,10 +254,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {
-    "collapsed": false
-   },
+   "execution_count": 14,
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -264,10 +288,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
-   "metadata": {
-    "collapsed": false
-   },
+   "execution_count": 15,
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -300,10 +322,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
-   "metadata": {
-    "collapsed": false
-   },
+   "execution_count": 16,
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -311,7 +331,7 @@
        "1.1"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -338,10 +358,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
-   "metadata": {
-    "collapsed": false
-   },
+   "execution_count": 19,
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -349,7 +367,7 @@
        "[1, 2, 3]"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -374,21 +392,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
-   "metadata": {
-    "collapsed": false
-   },
+   "execution_count": 20,
+   "metadata": {},
    "outputs": [
     {
      "data": {
       "text/latex": [
-       "\\frac{\\text{s}^{3}\\cdot \\text{m}^{2}}{\\text{kg}\\cdot \\text{A}^2}"
+       "\\frac{\\text{m}^{2}\\cdot \\text{s}^{3}}{\\text{A}^2\\cdot \\text{kg}}"
+      ],
+      "text/markdown": [
+       "$\\frac{\\text{m}^{2}\\cdot \\text{s}^{3}}{\\text{A}^2\\cdot \\text{kg}}$"
       ],
       "text/plain": [
-       "<PhysicalUnit s**3*m**2/kg/A**2>"
+       "<PhysicalUnit m**2*s**3/A**2/kg>"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -401,7 +420,6 @@
    "cell_type": "code",
    "execution_count": 12,
    "metadata": {
-    "collapsed": false,
     "run_control": {
      "breakpoint": false
     }
@@ -435,9 +453,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -456,9 +472,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 22,
    "metadata": {
-    "collapsed": false,
     "run_control": {
      "breakpoint": false
     }
@@ -468,14 +483,14 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "['m', 'kg', 's', 'A', 'K', 'mol', 'cd', 'rad', 'sr']\n",
-      "[1, 0, 0, 0, 0, 0, 0, 0, 0]\n",
+      "['m', 'kg', 's', 'A', 'K', 'mol', 'cd', 'rad', 'sr', 'Bit', 'currency']\n",
+      "[1, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0]\n",
       "m\n"
      ]
     }
    ],
    "source": [
-    "from PhysicalQuantities.Unit import base_names\n",
+    "from PhysicalQuantities.unit import base_names\n",
     "print(base_names) # list containing names of base units\n",
     "a = q.m\n",
     "print(a.unit.powers)\n",
@@ -491,9 +506,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 23,
    "metadata": {
-    "collapsed": false,
     "run_control": {
      "breakpoint": false
     }
@@ -503,9 +517,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "['m', 'kg', 's', 'A', 'K', 'mol', 'cd', 'rad', 'sr']\n",
-      "[2, -1, 3, -2, 0, 0, 0, 0, 0]\n",
-      "s^3*m^2/kg/A^2\n"
+      "['m', 'kg', 's', 'A', 'K', 'mol', 'cd', 'rad', 'sr', 'Bit', 'currency']\n",
+      "[2, -1, 3, -2, 0, 0, 0, 0, 0, 0, 0]\n",
+      "m^2*s^3/A^2/kg\n"
      ]
     }
    ],
@@ -542,7 +556,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.4.4"
+   "version": "3.6.6"
   }
  },
  "nbformat": 4,
